    to be escaped (e.g. if a class name contained a ':' or '.').
    <https://github.com/jhy/jsoup/issues/1742>

  * Bugfix: element.text() should have a space between a block and an inline element.
    <https://github.com/jhy/jsoup/issues/1877>

  * Bugfix: if a Node or an Element was replaced with itself, that node would incorrectly be orphaned.
    <https://github.com/jhy/jsoup/issues/1843>

Release 1.15.3 [2022-Aug-24]
  * Security: fixed an issue where the jsoup cleaner may incorrectly sanitize crafted XSS attempts if
    SafeList.preserveRelativeLinks is enabled.
    <https://github.com/jhy/jsoup/security/advisories/GHSA-gp7f-rwcx-9369>

  * Improvement: the Cleaner will preserve the source position of cleaned elements, if source tracking is enabled in the
    original parse.

  * Improvement: the error messages output from Validate are more descriptive. Exceptions are now ValidationExceptions
    (extending IllegalArgumentException). Stack traces do not include the Validate class, to make it simpler to see
    where the exception originated. Common validation errors including malformed URLs and empty selector results have
    more explicit error messages.

  * Bugfix: the DataUtil would incorrectly read from InputStreams that emitted reads less than the requested size. This
    lead to incorrect results when parsing from chunked server responses, for e.g.
    <https://github.com/jhy/jsoup/issues/1807>

  * Build Improvement: added implementation version and related fields to the jar manifest.
    <https://github.com/jhy/jsoup/issues/1809>

*** Release 1.15.2 [2022-Jul-04]
  * Improvement: added the ability to track the position (line, column, index) in the original input source from where
    a given node was parsed. Accessible via Node.sourceRange() and Element.endSourceRange().
    <https://github.com/jhy/jsoup/pull/1790>

  * Improvement: added Element.firstElementChild(), Element.lastElementChild(), Node.firstChild(), Node.lastChild(),