@@ -1,0 +1,16 @@
+<title>Form test</title>
+
+<form id="login" action="/CookieServlet" method="post">
+  <input name="setCookies" value="1" type="hidden">
+  <input name="loc" value="/EchoServlet" type="hidden">
+
+  Username: <input name="username"><br>
+  Password: <input name="password" type="password">
+</form>
+
+<form id="login2" action="/CookieServlet" method="post">
+  <input name="setCookies" value="1" type="hidden">
+
+  Username: <input name="username"><br>
+  Password: <input name="password" type="password">
+</form>
